<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_note_white_24dp"
            android:iconTint="@color/black"
            android:title="@string/nav_menu_music" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_videocam_white_24dp"
            android:iconTint="@color/black"
            android:title="@string/nav_menu_video" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist_play_white_24dp"
            android:iconTint="@color/black"
            android:title="@string/nav_menu_playlist" />
        <item
            android:visible="false"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_menu_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_info_white_24dp"
                android:iconTint="@color/black"
                android:title="@string/nav_menu_about_app" />
        </menu>
    </item>

</menu>
